# FocusFlow

./: FocusFlow-DevPlan.md  FocusFlow-PRD.md  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
docs/superpowers/specs/: 2026-07-09-ui-redesign-spec.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/monitor/: macos.rs  mod.rs  windows.rs
src-tauri/src/pomodoro/: mod.rs
src-tauri/src/timer/: mod.rs
src/components/: AddBindingModal.tsx  AwayWarningDialog.tsx  BindingsPage.tsx  CloseConfirmDialog.tsx  DailyUsageCard.tsx  EditBindingModal.tsx  FloatingWidget.tsx  InsightsPage.tsx  Onboarding.tsx  PomodoroPage.tsx  SettingsPage.tsx  Sidebar.tsx  TaskGroupModal.tsx  Toast.tsx  TodayPage.tsx  TrendsPage.tsx  TrendsPreview.tsx
src/lib/: sounds.ts  tauri.ts  useTimerEvents.ts  utils.ts
src/stores/: awayWarningStore.ts  themeStore.ts  timerStore.ts  toastStore.ts
